beginn the frontend

--- a/src/style.css
+++ b/src/style.css
@@ -20,3 +20,10 @@
   justify-content: center;
   min-height: 100vh;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-y: hidden;
+}
